// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when viewing as an organisation commenter (post-submission) 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="grid"
    >
      <div
        data-g="12"
      >
        <nav
          aria-label="Breadcrumbs"
        >
          <p
            class="visually-hidden"
          >
            You are here:
          </p>
          <ol
            class="breadcrumbs"
            itemscope=""
            itemtype="http://schema.org/BreadcrumbList"
          >
            <li
              class="breadcrumbs__crumb"
              itemprop="itemListElement"
              itemscope=""
              itemtype="http://schema.org/ListItem"
              role="presentation"
            >
              <a
                href="/"
                itemprop="item"
              >
                <span
                  itemprop="name"
                >
                  Home
                </span>
              </a>
              <meta
                content="0"
                itemprop="position"
              />
            </li>
            <li
              class="breadcrumbs__crumb"
              itemprop="itemListElement"
              itemscope=""
              itemtype="http://schema.org/ListItem"
              role="presentation"
            >
              <a
                href="/guidance/indevelopment/gid-ta10232/consultation/"
                itemprop="item"
              >
                <span
                  itemprop="name"
                >
                  Consultation title
                </span>
              </a>
              <meta
                content="1"
                itemprop="position"
              />
            </li>
            <li
              class="breadcrumbs__crumb"
              itemprop="itemListElement"
              itemscope=""
              itemtype="http://schema.org/ListItem"
              role="presentation"
            >
              <a
                href="/consultations/1/1/introduction"
                itemprop="item"
              >
                <span
                  itemprop="name"
                >
                  Consultation documents
                </span>
              </a>
              <meta
                content="2"
                itemprop="position"
              />
            </li>
          </ol>
        </nav>
        <main>
          <div
            class="page-header"
          >
            <h1
              class="page-header__heading mt--0"
              data-qa-sel="changeable-page-header"
            >
              Response submitted
            </h1>
            <div
              class="mb--d"
            >
              <p
                class="container container-full ml--0"
              >
                <span>
                  <span
                    class="tag tag--open"
                  >
                    Open for comments
                  </span>
                   Open until
                   
                  <time
                    datetime="1874937600000"
                  >
                    31 May 2029
                  </time>
                </span>
                  
                <a
                  href="/leadinformation"
                >
                  Request commenting lead permission
                </a>
              </p>
            </div>
            
            
            <h2>
              Your response was submitted 
              to Really Cool Org
               on 
              <time
                datetime="1563886240704"
              >
                23 July 2019
              </time>
              .
            </h2>
            <ul
              class="list list--unstyled"
            />
            <h2>
              What happens next?
            </h2>
            <p>
              Really Cool Org
               will review all the submissions received for this consultation.
            </p>
            <p>
              NICE's response to all the submissions received will be published on the website around the time the final guidance is published.
            </p>
            <hr />
            <div
              class="grid"
            >
              <div
                class="sticky"
                data-g="12 md:3"
              >
                <h2
                  class="h5 mt--0"
                >
                  Filter
                </h2>
                <div
                  class="filter-panel"
                >
                  <div
                    class="filter-panel__body"
                    id="filter-panel-body"
                  >
                    <div
                      class="filter-group"
                    >
                      <button
                        aria-controls="group-QuestionsOrComments"
                        aria-expanded="true"
                        class="filter-group__heading gtm-topic-list-filter-group-collapse"
                        type="button"
                      >
                        <div
                          id="group-title-QuestionsOrComments"
                        >
                          <span
                            class="visually-hidden"
                          >
                            Filter by 
                          </span>
                          Response type
                        </div>
                      </button>
                      <div
                        aria-hidden="false"
                        aria-labelledby="group-title-QuestionsOrComments"
                        class="filter-group__options"
                        id="group-QuestionsOrComments"
                        role="group"
                      >
                        <label
                          class="filter-group__option break-word"
                          for="filter_QuestionsOrComments_Questions"
                        >
                          <input
                            aria-controls="results-info-count"
                            class="gtm-topic-list-filter-select"
                            id="filter_QuestionsOrComments_Questions"
                            name="QuestionsOrComments"
                            title="Response type - Questions"
                            type="checkbox"
                            value="Questions"
                          />
                          Questions
                        </label>
                        <label
                          class="filter-group__option break-word"
                          for="filter_QuestionsOrComments_Comments"
                        >
                          <input
                            aria-controls="results-info-count"
                            class="gtm-topic-list-filter-select"
                            id="filter_QuestionsOrComments_Comments"
                            name="QuestionsOrComments"
                            title="Response type - Comments"
                            type="checkbox"
                            value="Comments"
                          />
                          Comments
                        </label>
                      </div>
                    </div>
                    <div
                      class="filter-group"
                    >
                      <button
                        aria-controls="group-Document"
                        aria-expanded="true"
                        class="filter-group__heading gtm-topic-list-filter-group-collapse"
                        type="button"
                      >
                        <div
                          id="group-title-Document"
                        >
                          <span
                            class="visually-hidden"
                          >
                            Filter by 
                          </span>
                          Document
                        </div>
                      </button>
                      <div
                        aria-hidden="false"
                        aria-labelledby="group-title-Document"
                        class="filter-group__options"
                        id="group-Document"
                        role="group"
                      >
                        <label
                          class="filter-group__option break-word"
                          for="filter_Document_1"
                        >
                          <input
                            aria-controls="results-info-count"
                            class="gtm-topic-list-filter-select"
                            id="filter_Document_1"
                            name="Document"
                            title="Document - Unstable angina and NSTEMI"
                            type="checkbox"
                            value="1"
                          />
                          Unstable angina and NSTEMI
                        </label>
                        <label
                          class="filter-group__option break-word"
                          for="filter_Document_2"
                        >
                          <input
                            aria-controls="results-info-count"
                            class="gtm-topic-list-filter-select"
                            id="filter_Document_2"
                            name="Document"
                            title="Document - Glaucoma: diagnosis and management – Full Guideline"
                            type="checkbox"
                            value="2"
                          />
                          Glaucoma: diagnosis and management – Full Guideline
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-g="12 md:9"
              >
                <div
                  class="results-info"
                >
                  <h2
                    class="results-info__count h5"
                    id="results-info-count"
                  >
                    <span>
                      Showing 3 questions and 2 comments
                    </span>
                  </h2>
                </div>
                <div
                  data-qa-sel="comment-list-wrapper"
                >
                  <div>
                    <ul
                      class="CommentList list--unstyled"
                    >
                      <li
                        class="CommentBox"
                      >
                        <h4
                          class="CommentBox__title mt--0 mb--0"
                          data-qa-sel="comment-box-title"
                        >
                          Question on 
                          <span
                            class="text-lowercase"
                          >
                            Consultation
                          </span>
                        </h4>
                        <div
                          class="font-weight-bold markdown mt--d mb--d"
                        >
                          Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
                        </div>
                        <section
                          role="form"
                        >
                          <form
                            class="mb--0 mt--e"
                          >
                            <div
                              class="form__group form__group--textarea mb--b"
                            >
                              <label
                                class="form__label visually-hidden"
                                for="Question4-Answer-1"
                              >
                                Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
                              </label>
                              <textarea
                                class="form__input form__input--textarea"
                                data-hj-whitelist="true"
                                data-qa-sel="Comment-text-area"
                                disabled=""
                                id="Question4-Answer-1"
                              />
                            </div>
                          </form>
                        </section>
                      </li>
                      <li
                        class="CommentBox"
                      >
                        <h3
                          class="CommentBox__title mt--0 mb--0"
                        >
                          Unstable angina and NSTEMI
                        </h3>
                        <h4
                          class="CommentBox__title mt--0 mb--0"
                          data-qa-sel="comment-box-title"
                        >
                          Question on 
                          <span
                            class="text-lowercase"
                          >
                            Document
                          </span>
                        </h4>
                        <div
                          class="font-weight-bold markdown mt--d mb--d"
                        >
                          Would implementation of any of the draft recommendations have significant cost implications?
                        </div>
                        <section
                          role="form"
                        >
                          <form
                            class="mb--0 mt--e"
                          >
                            <div
                              class="form__group form__group--textarea mb--b"
                            >
                              <label
                                class="form__label visually-hidden"
                                for="Question5-Answer-1"
                              >
                                Would implementation of any of the draft recommendations have significant cost implications?
                              </label>
                              <textarea
                                class="form__input form__input--textarea"
                                data-hj-whitelist="true"
                                data-qa-sel="Comment-text-area"
                                disabled=""
                                id="Question5-Answer-1"
                              />
                            </div>
                          </form>
                        </section>
                      </li>
                      <li
                        class="CommentBox"
                      >
                        <h3
                          class="CommentBox__title mt--0 mb--0"
                        >
                          Glaucoma: diagnosis and management – Full Guideline
                        </h3>
                        <h4
                          class="CommentBox__title mt--0 mb--0"
                          data-qa-sel="comment-box-title"
                        >
                          Question on 
                          <span
                            class="text-lowercase"
                          >
                            Document
                          </span>
                        </h4>
                        <div
                          class="font-weight-bold markdown mt--d mb--d"
                        >
                          Would implementation of any of the draft recommendations have cost implications?
                        </div>
                        <section
                          role="form"
                        >
                          <form
                            class="mb--0 mt--e"
                          >
                            <div
                              class="form__group form__group--textarea mb--b"
                            >
                              <label
                                class="form__label visually-hidden"
                                for="Question6-Answer-1"
                              >
                                Would implementation of any of the draft recommendations have cost implications?
                              </label>
                              <textarea
                                class="form__input form__input--textarea"
                                data-hj-whitelist="true"
                                data-qa-sel="Comment-text-area"
                                disabled=""
                                id="Question6-Answer-1"
                              />
                            </div>
                          </form>
                        </section>
                      </li>
                    </ul>
                  </div>
                  <ul
                    class="CommentList list--unstyled"
                  >
                    <li
                      class="CommentBox"
                    >
                      <section
                        role="form"
                      >
                        <h1
                          class="CommentBox__title mv--0"
                        >
                          Unstable angina and NSTEMI
                        </h1>
                        <h3
                          class="CommentBox__title mt--0 mb--d"
                          data-qa-sel="comment-box-title"
                        >
                          Comment on 
                          <span
                            class="text-lowercase"
                          >
                            Document
                          </span>
                        </h3>
                        <form
                          class="mb--0"
                        >
                          <div
                            class="form__group form__group--textarea mb--b"
                          >
                            <label
                              class="form__label visually-hidden"
                              for="Comment5"
                            >
                              Comment on 
                              Document
                              , 
                              Unstable angina and NSTEMI
                            </label>
                            <textarea
                              class="form__input form__input--textarea"
                              data-hj-whitelist="true"
                              data-qa-sel="Comment-text-area"
                              disabled=""
                              id="Comment5"
                              tabindex="0"
                            >
                              ffffc
                            </textarea>
                          </div>
                        </form>
                      </section>
                    </li>
                    <li
                      class="CommentBox"
                    >
                      <section
                        role="form"
                      >
                        <h1
                          class="CommentBox__title mv--0"
                        >
                          Unstable angina and NSTEMI
                        </h1>
                        <h3
                          class="CommentBox__title mt--0 mb--d"
                          data-qa-sel="comment-box-title"
                        >
                          Comment on 
                          <span
                            class="text-lowercase"
                          >
                            Chapter
                          </span>
                          <span>
                             - "
                            Introduction
                            "
                          </span>
                        </h3>
                        <form
                          class="mb--0"
                        >
                          <div
                            class="form__group form__group--textarea mb--b"
                          >
                            <label
                              class="form__label visually-hidden"
                              for="Comment7"
                            >
                              Comment on 
                              Chapter
                              , 
                              Introduction 
                            </label>
                            <textarea
                              class="form__input form__input--textarea"
                              data-hj-whitelist="true"
                              data-qa-sel="Comment-text-area"
                              disabled=""
                              id="Comment7"
                              tabindex="0"
                            >
                              ffff
                            </textarea>
                          </div>
                        </form>
                      </section>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </div>
  </div>
  <div>
    <div
      aria-live="assertive"
      role="log"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; white-space: nowrap; padding: 0px; width: 1px; position: absolute;"
    />
    <div
      aria-live="assertive"
      role="log"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; white-space: nowrap; padding: 0px; width: 1px; position: absolute;"
    />
    <div
      aria-live="polite"
      role="log"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; white-space: nowrap; padding: 0px; width: 1px; position: absolute;"
    >
      Showing 3 questions and 2 comments
    </div>
    <div
      aria-live="polite"
      role="log"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; white-space: nowrap; padding: 0px; width: 1px; position: absolute;"
    />
  </div>
</div>
`;

exports[`should match snapshot when viewing as an organisation commenter (pre-submission) 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="grid"
    >
      <div
        data-g="12"
      >
        <nav
          aria-label="Breadcrumbs"
        >
          <p
            class="visually-hidden"
          >
            You are here:
          </p>
          <ol
            class="breadcrumbs"
            itemscope=""
            itemtype="http://schema.org/BreadcrumbList"
          >
            <li
              class="breadcrumbs__crumb"
              itemprop="itemListElement"
              itemscope=""
              itemtype="http://schema.org/ListItem"
              role="presentation"
            >
              <a
                href="/"
                itemprop="item"
              >
                <span
                  itemprop="name"
                >
                  Home
                </span>
              </a>
              <meta
                content="0"
                itemprop="position"
              />
            </li>
            <li
              class="breadcrumbs__crumb"
              itemprop="itemListElement"
              itemscope=""
              itemtype="http://schema.org/ListItem"
              role="presentation"
            >
              <a
                href="/guidance/indevelopment/gid-ta10232/consultation/"
                itemprop="item"
              >
                <span
                  itemprop="name"
                >
                  Consultation title
                </span>
              </a>
              <meta
                content="1"
                itemprop="position"
              />
            </li>
            <li
              class="breadcrumbs__crumb"
              itemprop="itemListElement"
              itemscope=""
              itemtype="http://schema.org/ListItem"
              role="presentation"
            >
              <a
                href="/consultations/1/1/introduction"
                itemprop="item"
              >
                <span
                  itemprop="name"
                >
                  Consultation documents
                </span>
              </a>
              <meta
                content="2"
                itemprop="position"
              />
            </li>
          </ol>
        </nav>
        <main>
          <div
            class="page-header"
          >
            <h1
              class="page-header__heading mt--0"
              data-qa-sel="changeable-page-header"
            >
              Review your response
            </h1>
            <div
              class="mb--d"
            >
              <p
                class="container container-full ml--0"
              >
                <span>
                  <span
                    class="tag tag--open"
                  >
                    Open for comments
                  </span>
                   Open until
                   
                  <time
                    datetime="1874937600000"
                  >
                    31 May 2029
                  </time>
                </span>
                  
                <a
                  href="/leadinformation"
                >
                  Request commenting lead permission
                </a>
              </p>
            </div>
            <p>
              On this page you can review and edit your response to the consultation before you send them to Really Cool Org.
            </p>
            <div
              class="alert alert--caution"
              role="alert"
            >
              <p>
                Once you have sent your response you will not be able to edit it or add any more comments.
              </p>
            </div>
            <ul
              class="list list--unstyled"
            />
            <div
              class="grid"
            >
              <div
                class="sticky"
                data-g="12 md:3"
              >
                <h2
                  class="h5 mt--0"
                >
                  Filter
                </h2>
                <div
                  class="filter-panel"
                >
                  <div
                    class="filter-panel__body"
                    id="filter-panel-body"
                  >
                    <div
                      class="filter-group"
                    >
                      <button
                        aria-controls="group-QuestionsOrComments"
                        aria-expanded="true"
                        class="filter-group__heading gtm-topic-list-filter-group-collapse"
                        type="button"
                      >
                        <div
                          id="group-title-QuestionsOrComments"
                        >
                          <span
                            class="visually-hidden"
                          >
                            Filter by 
                          </span>
                          Response type
                        </div>
                      </button>
                      <div
                        aria-hidden="false"
                        aria-labelledby="group-title-QuestionsOrComments"
                        class="filter-group__options"
                        id="group-QuestionsOrComments"
                        role="group"
                      >
                        <label
                          class="filter-group__option break-word"
                          for="filter_QuestionsOrComments_Questions"
                        >
                          <input
                            aria-controls="results-info-count"
                            class="gtm-topic-list-filter-select"
                            id="filter_QuestionsOrComments_Questions"
                            name="QuestionsOrComments"
                            title="Response type - Questions"
                            type="checkbox"
                            value="Questions"
                          />
                          Questions
                        </label>
                        <label
                          class="filter-group__option break-word"
                          for="filter_QuestionsOrComments_Comments"
                        >
                          <input
                            aria-controls="results-info-count"
                            class="gtm-topic-list-filter-select"
                            id="filter_QuestionsOrComments_Comments"
                            name="QuestionsOrComments"
                            title="Response type - Comments"
                            type="checkbox"
                            value="Comments"
                          />
                          Comments
                        </label>
                      </div>
                    </div>
                    <div
                      class="filter-group"
                    >
                      <button
                        aria-controls="group-Document"
                        aria-expanded="true"
                        class="filter-group__heading gtm-topic-list-filter-group-collapse"
                        type="button"
                      >
                        <div
                          id="group-title-Document"
                        >
                          <span
                            class="visually-hidden"
                          >
                            Filter by 
                          </span>
                          Document
                        </div>
                      </button>
                      <div
                        aria-hidden="false"
                        aria-labelledby="group-title-Document"
                        class="filter-group__options"
                        id="group-Document"
                        role="group"
                      >
                        <label
                          class="filter-group__option break-word"
                          for="filter_Document_1"
                        >
                          <input
                            aria-controls="results-info-count"
                            class="gtm-topic-list-filter-select"
                            id="filter_Document_1"
                            name="Document"
                            title="Document - Unstable angina and NSTEMI"
                            type="checkbox"
                            value="1"
                          />
                          Unstable angina and NSTEMI
                        </label>
                        <label
                          class="filter-group__option break-word"
                          for="filter_Document_2"
                        >
                          <input
                            aria-controls="results-info-count"
                            class="gtm-topic-list-filter-select"
                            id="filter_Document_2"
                            name="Document"
                            title="Document - Glaucoma: diagnosis and management – Full Guideline"
                            type="checkbox"
                            value="2"
                          />
                          Glaucoma: diagnosis and management – Full Guideline
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-g="12 md:9"
              >
                <div
                  class="results-info"
                >
                  <h2
                    class="results-info__count h5"
                    id="results-info-count"
                  >
                    <span>
                      Showing 3 questions and 2 comments
                    </span>
                  </h2>
                </div>
                <div
                  data-qa-sel="comment-list-wrapper"
                >
                  <div>
                    <ul
                      class="CommentList list--unstyled"
                    >
                      <li
                        class="CommentBox"
                      >
                        <h4
                          class="CommentBox__title mt--0 mb--0"
                          data-qa-sel="comment-box-title"
                        >
                          Question on 
                          <span
                            class="text-lowercase"
                          >
                            Consultation
                          </span>
                        </h4>
                        <div
                          class="font-weight-bold markdown mt--d mb--d"
                        >
                          Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
                        </div>
                        <section
                          role="form"
                        >
                          <form
                            class="mb--0 mt--e"
                          >
                            <div
                              class="form__group form__group--textarea mb--b"
                            >
                              <label
                                class="form__label visually-hidden"
                                for="Question4-Answer-1"
                              >
                                Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
                              </label>
                              <textarea
                                class="form__input form__input--textarea"
                                data-hj-whitelist="true"
                                data-qa-sel="Comment-text-area"
                                id="Question4-Answer-1"
                              />
                            </div>
                          </form>
                        </section>
                      </li>
                      <li
                        class="CommentBox"
                      >
                        <h3
                          class="CommentBox__title mt--0 mb--0"
                        >
                          Unstable angina and NSTEMI
                        </h3>
                        <h4
                          class="CommentBox__title mt--0 mb--0"
                          data-qa-sel="comment-box-title"
                        >
                          Question on 
                          <span
                            class="text-lowercase"
                          >
                            Document
                          </span>
                        </h4>
                        <div
                          class="font-weight-bold markdown mt--d mb--d"
                        >
                          Would implementation of any of the draft recommendations have significant cost implications?
                        </div>
                        <section
                          role="form"
                        >
                          <form
                            class="mb--0 mt--e"
                          >
                            <div
                              class="form__group form__group--textarea mb--b"
                            >
                              <label
                                class="form__label visually-hidden"
                                for="Question5-Answer-1"
                              >
                                Would implementation of any of the draft recommendations have significant cost implications?
                              </label>
                              <textarea
                                class="form__input form__input--textarea"
                                data-hj-whitelist="true"
                                data-qa-sel="Comment-text-area"
                                id="Question5-Answer-1"
                              />
                            </div>
                          </form>
                        </section>
                      </li>
                      <li
                        class="CommentBox"
                      >
                        <h3
                          class="CommentBox__title mt--0 mb--0"
                        >
                          Glaucoma: diagnosis and management – Full Guideline
                        </h3>
                        <h4
                          class="CommentBox__title mt--0 mb--0"
                          data-qa-sel="comment-box-title"
                        >
                          Question on 
                          <span
                            class="text-lowercase"
                          >
                            Document
                          </span>
                        </h4>
                        <div
                          class="font-weight-bold markdown mt--d mb--d"
                        >
                          Would implementation of any of the draft recommendations have cost implications?
                        </div>
                        <section
                          role="form"
                        >
                          <form
                            class="mb--0 mt--e"
                          >
                            <div
                              class="form__group form__group--textarea mb--b"
                            >
                              <label
                                class="form__label visually-hidden"
                                for="Question6-Answer-1"
                              >
                                Would implementation of any of the draft recommendations have cost implications?
                              </label>
                              <textarea
                                class="form__input form__input--textarea"
                                data-hj-whitelist="true"
                                data-qa-sel="Comment-text-area"
                                id="Question6-Answer-1"
                              />
                            </div>
                          </form>
                        </section>
                      </li>
                    </ul>
                  </div>
                  <ul
                    class="CommentList list--unstyled"
                  >
                    <li
                      class="CommentBox"
                    >
                      <section
                        role="form"
                      >
                        <h1
                          class="CommentBox__title mv--0"
                        >
                          Unstable angina and NSTEMI
                        </h1>
                        <h3
                          class="CommentBox__title mt--0 mb--d"
                          data-qa-sel="comment-box-title"
                        >
                          Comment on 
                          <span
                            class="text-lowercase"
                          >
                            Document
                          </span>
                        </h3>
                        <form
                          class="mb--0"
                        >
                          <div
                            class="form__group form__group--textarea mb--b"
                          >
                            <label
                              class="form__label visually-hidden"
                              for="Comment5"
                            >
                              Comment on 
                              Document
                              , 
                              Unstable angina and NSTEMI
                            </label>
                            <textarea
                              class="form__input form__input--textarea"
                              data-hj-whitelist="true"
                              data-qa-sel="Comment-text-area"
                              id="Comment5"
                              tabindex="0"
                            >
                              ffffc
                            </textarea>
                          </div>
                          <span
                            class="ml--0 mb--0 CommentBox__savedIndicator"
                          >
                            Saved
                          </span>
                          <button
                            class="btn mr--0 mb--0 right"
                            data-qa-sel="delete-comment-button"
                          >
                            Delete
                          </button>
                        </form>
                      </section>
                    </li>
                    <li
                      class="CommentBox"
                    >
                      <section
                        role="form"
                      >
                        <h1
                          class="CommentBox__title mv--0"
                        >
                          Unstable angina and NSTEMI
                        </h1>
                        <h3
                          class="CommentBox__title mt--0 mb--d"
                          data-qa-sel="comment-box-title"
                        >
                          Comment on 
                          <span
                            class="text-lowercase"
                          >
                            Chapter
                          </span>
                          <span>
                             - "
                            Introduction
                            "
                          </span>
                        </h3>
                        <form
                          class="mb--0"
                        >
                          <div
                            class="form__group form__group--textarea mb--b"
                          >
                            <label
                              class="form__label visually-hidden"
                              for="Comment7"
                            >
                              Comment on 
                              Chapter
                              , 
                              Introduction 
                            </label>
                            <textarea
                              class="form__input form__input--textarea"
                              data-hj-whitelist="true"
                              data-qa-sel="Comment-text-area"
                              id="Comment7"
                              tabindex="0"
                            >
                              ffff
                            </textarea>
                          </div>
                          <span
                            class="ml--0 mb--0 CommentBox__savedIndicator"
                          >
                            Saved
                          </span>
                          <button
                            class="btn mr--0 mb--0 right"
                            data-qa-sel="delete-comment-button"
                          >
                            Delete
                          </button>
                        </form>
                      </section>
                    </li>
                  </ul>
                </div>
                <div
                  class="panel"
                >
                  <h2>
                    You are about to send your final response to 
                    Really Cool Org
                  </h2>
                  <p>
                    Enter your email address so that your organisation can contact you about your comments if they have any questions. 
                    <strong>
                      On submission your email address and responses will be visible to other members or associates of your organisation who are using the same commenting code.
                    </strong>
                  </p>
                  <div
                    class="input"
                  >
                    <label
                      class="input__label"
                      for="emailAddress"
                    >
                      Email address
                    </label>
                    <input
                      class="input__input"
                      id="emailAddress"
                      name="emailAddress"
                      placeholder="eg: your.name@example.com..."
                      required=""
                      type="email"
                      value=""
                    />
                  </div>
                  <p>
                    Once you have sent your response you will not be able to edit it or add any more comments.
                  </p>
                  <button
                    class="btn btn--cta"
                  >
                    Send your response to your organisation
                  </button>
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </div>
  </div>
  <div>
    <div
      aria-live="assertive"
      role="log"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; white-space: nowrap; padding: 0px; width: 1px; position: absolute;"
    />
    <div
      aria-live="assertive"
      role="log"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; white-space: nowrap; padding: 0px; width: 1px; position: absolute;"
    />
    <div
      aria-live="polite"
      role="log"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; white-space: nowrap; padding: 0px; width: 1px; position: absolute;"
    >
      Showing 3 questions and 2 comments
    </div>
    <div
      aria-live="polite"
      role="log"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; white-space: nowrap; padding: 0px; width: 1px; position: absolute;"
    />
  </div>
</div>
`;
